Fixes some layout issues.
- Backspace symbol button centered on button.

- Display no longer pushes current number down when memo
  is displayed.

--- a/style.css
+++ b/style.css
@@ -135,22 +135,26 @@ p {
   background-color: var(--display-bg);
   color: var(--display-font-color);
   grid-column: 1 / -1;
-  display: flex;
-  flex-direction: column;
-  padding-right: 5%;
+  padding: 1% 3%;
 }
 
 #memo {
-  font-size: 0.75rem;
+  height: 15px;
+  width: 100%;
+  font-size: 1rem;
   font-weight: normal;
-  align-self: flex-start;
-  padding-left: 5%;
-  padding-top: 2.5%;
+  text-align: left;
 }
 
 #current-operand {
+  height: 60px;
+  width: 100%;
   font-size: 2.5rem;
-  align-self: flex-end;
+  text-align: right;
+}
+
+#backspace {
+  padding-right: 9px;
 }
 
 button {
